<resources>
    <string name="app_name">ARCookingClass</string>
    <string name="hint_recipe_name">레시피 이름</string>
    <string name="hint_ingredient_name">준비물 이름</string>
    <string name="next_btn_name">next</string>
    <string name="start_guide_video_txt">시작</string>
    <string name="pause_guide_video_txt">정지</string>
    <string name="turn_on_gas_video_txt">가스 불을 켜주세요.</string>
    <string name="place_dough_video_txt">반죽을 팬에 올려주세요. </string>
    <string name="add_oil_video_txt">기름을 둘러주세요.</string>
    <string name="bake_pajeon_video_txt">파전을 구워주세요.</string>
    <string name="complete_cooking_txt">요리 완성</string>
    <string name="next_guide_video_txt">다음</string>
    <string name="prev_guide_video_txt">이전</string>
    <string name="complete_btn_name">완료</string>
    <string name="splash_app_name">|오늘의 식탁|</string>
    <string name="snack_food">분식</string>
    <string name="korean_food">한식</string>
    <string name="western_food">양식</string>
    <string name="late_night_food">야식</string>
    <string name="pajeon_sub_title">비오는 날 생각나는</string>
    <string name="pajeon_title">|파전|</string>
    <string name="recipe_level">난이도</string>
    <string name="recipe_time">소요시간</string>
    <string name="recipe_price">가격</string>
    <string name="buy_btn_name">구매하기</string>
    <string name="ingredient">재료</string>
    <string name="ingredient_amount">2장 분량</string>
    <string name="ingredient_dough">반죽 재료</string>
    <string name="recipe">레시피</string>
    <string name="complete">완성</string>
    <string name="initCM">0.0</string>
    <string name="clear">초기화</string>
    <string name="learn_complete">수강 완료</string>
</resources>