<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="recipeItem"
            type="com.example.arcookingclass.data.Recipe" />
        <variable
            name="viewModel"
            type="com.example.arcookingclass.view.recipeintro.RecipeIntroViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pajeon_sub_title"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="50dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="| "
                android:textSize="45dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{recipeItem.name}"
                android:textSize="45dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" |"
                android:textSize="45dp"/>

        </LinearLayout>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@{recipeItem.image_url, default = @drawable/icon_recipe }"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_level"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{recipeItem.level}"
                android:layout_weight="1"
                android:textSize="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_time"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{recipeItem.time}"
                android:layout_weight="1"
                android:textSize="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/recipe_price"
                android:layout_weight="1"
                android:textSize="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="500원"
                android:layout_weight="1"
                android:textSize="10dp"/>
        </LinearLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:layout_gravity="center"
            android:text="빗소리와 함께하면 맛있음이 두배가 되는 파전\n취향에 따라 좋아하는 해산물을 넣는다면\n더 푸짐한 식사를 할 수 있어요."
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_btn_name"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:onClick="@{()->viewModel.onButtonClick()}"
            android:background="#00ff0000"/>
    </LinearLayout>
</layout>